Fixing the overflowing problem that caused the lagging when scrolling down the page

--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,10 @@
 }
 
 @keyframes App-logo-spin {
-  from {
+  /* from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
-  }
+  } */
 }
